# Ccomp1_2024

./: CMakeLists.txt  README.md
Base_de_Datos/: AbogadoController.cpp  AbogadoModel.cpp  AbogadoModel.hpp  AbogadoView.cpp  AbogadoView.hpp  CMakeLists.txt  ColorManipulation.cpp  ColorManipulation.hpp  DocumentosController.cpp  DocumentosController.hpp  DocumentosManager.cpp  DocumentosManager.hpp  DocumentosModel.cpp  DocumentosModel.hpp  DocumentosView.cpp  DocumentosView.hpp  Fecha.cpp  Fecha.hpp  Imagenes.cpp  Imagenes.hpp  MainGestion.cpp  MainGestion.hpp  Menu.cpp  Menu.hpp  abogado.hpp  boletas.cpp  clientecontrolador.cpp  clientecontrolador.hpp  clientemodelo.cpp  clientemodelo.hpp  clientes.cpp  clientes.hpp  clientevista.cpp  clientevista.hpp  economia.hpp  facturas.hpp  listaGenerica.hpp  main.cpp  mainEconomia.cpp  mainEconomia.hpp  (+2 more)
Base_de_datos_cliente/: AbogadoController.cpp  AbogadoModel.cpp  AbogadoModel.hpp  AbogadoView.cpp  CMakeLists.txt  Fecha.cpp  Fecha.hpp  InterfazBoletas.hpp  InterfazFacturas.cpp  InterfazFacturas.hpp  MainGestion.cpp  MainGestion.hpp  abogado.cpp  boletas.hpp  clientes.cpp  clientes.hpp  facturas.cpp  main.cpp  persona.cpp  persona.hpp
Manipulacion_colores/: CMakeLists.txt  ColorManipulation.hpp  Manipulacion_colores.rar  main.cpp
Project_0001/: main.cpp
Project_0002/: CMakeLists.txt  main.cpp
Project_0003/: CMakeLists.txt  main.cpp
Project_0004/: CMakeLists.txt  main.cpp
Project_0005/: CMakeLists.txt  main.cpp
Project_0006/: CMakeLists.txt  main.cpp
Project_0013/: CMakeLists.txt  cCar.cpp  cCar.h  cParking.cpp  (+2 more)
(+84 files in other folders)
