# add_subdirectory( Project_0001 )
# add_subdirectory( Project_0002 )
#add_subdirectory( Project_0003 )
# add_subdirectory( Project_0004 )
# add_subdirectory  Project_0005 )
# add_subdirectory( Project_0006 )
# add_subdirectory( Proyect_logo_san_pablo )
#add_subdirectory (proyect_gato)
#add_subdirectory (pruebas_gato)
#add_subdirectory (Proyect_gato_control)
#add_subdirectory (project_oso)
#add_subdirectory (Project_oso_pruebas)
#add_subdirectory (project_punteros)

#pruebas base de datos

#add_subdirectory(p_final_pi_documentos)
#add_subdirectory(p_final_pi_abogado)
#add_subdirectory(p_final_pi_cliente)

add_subdirectory(Project_modelo_BaseDeDatos)